// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h2
  className="sc-bdvvtL hFVmVK sinoui-typography sinoui-typography--h2"
  color="textPrimary"
  type="h2"
>
  H2
</h2>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdvvtL hFVmVK sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL fQfVtu sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL cjhZJz sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL hPmPhG sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL dweaLC sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h2
    className="sc-bdvvtL hFVmVK sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL itIyfl sinoui-typography sinoui-typography--h2"
    color="primary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL gsfkXK sinoui-typography sinoui-typography--h2"
    color="secondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL hFVmVK sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL icmkEX sinoui-typography sinoui-typography--h2"
    color="textSecondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL jKrNDL sinoui-typography sinoui-typography--h2"
    color="error"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL gRHjNS sinoui-typography sinoui-typography--h2"
    color="warning"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL hPmPhG sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdvvtL UAKKG sinoui-typography sinoui-typography--h2"
    color="info"
    type="h2"
  >
    H2
  </h2>,
]
`;
